tests/should-fail/rawcodelit-12.j
globals
    integer p = 'ab\\'
endglobals